Add option to collocate adapter with settings

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -127,6 +127,9 @@ jobs:
     - task: build-settings
       file: loggregator-ci/tasks/capacity-planning/build-settings.yml
       params:
+        # ADAPTER_COLLOCATED: If false adapters will be deployed to their own instance group.
+        # If true, adapters will be deployed with doppler.
+        ADAPTER_COLLOCATED: false
         ADAPTER_COUNT: 2
         API_VERSION: v2
         CLIENT_ID: capacity_planning_authenticator
@@ -172,13 +175,13 @@ jobs:
 
             SETTINGS_FILE="$PWD/deployment-settings/settings.json"
 
-            DOPPLER_COUNT=$(cat $SETTINGS_FILE | jq .DOPPLER_COUNT --raw-output)
+            ADAPTER_COLLOCATED=$(cat $SETTINGS_FILE | jq .ADAPTER_COLLOCATED --raw-output)
             ADAPTER_COUNT=$(cat $SETTINGS_FILE | jq .ADAPTER_COUNT --raw-output)
-            LOG_API_COUNT=$(cat $SETTINGS_FILE | jq .LOG_API_COUNT --raw-output)
             DIEGO_CELL_COUNT=$(cat $SETTINGS_FILE | jq .DIEGO_CELL_COUNT --raw-output)
+            DOPPLER_COUNT=$(cat $SETTINGS_FILE | jq .DOPPLER_COUNT --raw-output)
+            LOG_API_COUNT=$(cat $SETTINGS_FILE | jq .LOG_API_COUNT --raw-output)
             ROUTER_COUNT=$(cat $SETTINGS_FILE | jq .ROUTER_COUNT --raw-output)
 
-            cp cf-deployment-develop/operations/non-collocated-cf-syslog-drain.yml ops-files/
             cp bbl-state/gcp/loggregator-capacity-planning/ops-files/*.yml ops-files/
 
             cat <<EOT >> ops-files/capacity-planning-config.yml
@@ -195,9 +198,6 @@ jobs:
               path: /instance_groups/name=diego-cell/instances
               value: $DIEGO_CELL_COUNT
             - type: replace
-              path: /instance_groups/name=adapter/instances
-              value: $ADAPTER_COUNT
-            - type: replace
               path: /releases/name=loggregator
               value:
                 name: loggregator
@@ -210,13 +210,22 @@ jobs:
                 url: https://bosh.io/d/github.com/cloudfoundry/cf-syslog-drain-release
                 version: latest
             EOT
+
+            if [ "$ADAPTER_COLLOCATED" == "false" ]; then
+              cat cf-deployment-develop/operations/non-collocated-cf-syslog-drain.yml >> ops-files/capacity-planning-config.yml
+              cat <<EOT >> ops-files/capacity-planning-config.yml
+            - type: replace
+              path: /instance_groups/name=adapter/instances
+              value: $ADAPTER_COUNT
+            EOT
+            fi
     - task: cf-deploy
       file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
       params:
         BBL_STATE_DIR: gcp/loggregator-capacity-planning
         SYSTEM_DOMAIN: loggregator-capacity-planning.cf-app.com
         VARS_STORE_FILE: gcp/loggregator-capacity-planning/deployment-vars.yml
-        OPS_FILES: "clients.yml non-collocated-cf-syslog-drain.yml instance-types.yml capacity-planning-config.yml"
+        OPS_FILES: "clients.yml instance-types.yml capacity-planning-config.yml"
     - put: deployments-loggregator-with-changes
       params:
         repository: updated-vars-store
