--- a/pipelines/loggregator/pws-us.yml
+++ b/pipelines/loggregator/pws-us.yml
@@ -40,6 +40,7 @@ jobs:
   - get: daily
     trigger: true
   - get: loggregator-ci
+  - get: loggregator-tools
   - task: restage-logspinner
     file: loggregator-ci/tasks/restage-apps.yml
     params:
