--- a/tasks/restage-apps.yml
+++ b/tasks/restage-apps.yml
@@ -11,7 +11,7 @@ params:
   USERNAME:
   PASSWORD:
 inputs:
-  - name: loggregator-ci
+- name: loggregator-tools
 run:
   path: bash
   args:
@@ -41,7 +41,7 @@ run:
         set -e
 
         if [ $ret -ne 0 ]; then
-          pushd loggregator-ci/tools/logspinner
+          pushd loggregator-tools/logspinner
             go build
             cf push $app_name -b binary_buildpack -c ./logspinner -m 64M
           popd
